--- a/Implementing_AES.ipynb
+++ b/Implementing_AES.ipynb
@@ -1,8 +1,18 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/egerhether/AES-mathematical-implementation/blob/main/Implementing_AES.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "PXRufAh7iuM6"
       },
@@ -47,7 +57,7 @@
       "metadata": {
         "id": "7pycVRuFRkST"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -83,7 +93,7 @@
       "metadata": {
         "id": "4IX4zfuWM3PV"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -97,14 +107,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "onlhztcn4oMH",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 38
         },
-        "outputId": "dd67ac0f-c3fd-46d8-9ff4-266cac8ac282"
+        "outputId": "4eb22923-3e0e-4c84-b37d-54b441cf5d80"
       },
       "outputs": [
         {
@@ -116,7 +126,7 @@
             "text/latex": "$\\displaystyle \\operatorname{Poly}{\\left( x^{6} + x^{3} + x, x, domain=\\mathbb{F}_{2} \\right)}$"
           },
           "metadata": {},
-          "execution_count": 930
+          "execution_count": 4
         }
       ],
       "source": [
@@ -146,7 +156,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "Hwt8-TgwE4BB"
       },
@@ -168,14 +178,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "b5nILYIN97pr",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 38
         },
-        "outputId": "c8d11325-901f-4e24-86f6-c5c336c24b69"
+        "outputId": "981361dd-bd8b-4db1-8764-c48a732a19e2"
       },
       "outputs": [
         {
@@ -187,7 +197,7 @@
             "text/latex": "$\\displaystyle \\operatorname{Poly}{\\left( x^{7} + x^{6} + x^{4} + x^{2}, x, domain=\\mathbb{F}_{2} \\right)}$"
           },
           "metadata": {},
-          "execution_count": 931
+          "execution_count": 6
         }
       ],
       "source": [
@@ -206,7 +216,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "K42ysGPP7aGP"
       },
@@ -234,9 +244,9 @@
           "height": 38
         },
         "id": "rnUR8Wa2kDu-",
-        "outputId": "2a9452fa-adb8-459c-d53b-4ca24d501cf8"
+        "outputId": "5c24d71f-c116-47f1-9444-7845d0428f94"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -247,7 +257,7 @@
             "text/latex": "$\\displaystyle \\operatorname{Poly}{\\left( x^{4} + x^{3} + 1, x, domain=\\mathbb{F}_{2} \\right)}$"
           },
           "metadata": {},
-          "execution_count": 933
+          "execution_count": 8
         }
       ]
     },
@@ -262,13 +272,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "xtc8hG6G9w6C",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "18480cb3-31c0-466f-cc05-8a9ed97bf341"
+        "outputId": "b3cf0a03-706e-4487-8cd2-a4d3f721afd9"
       },
       "outputs": [
         {
@@ -282,11 +292,11 @@
             ]
           },
           "metadata": {},
-          "execution_count": 934
+          "execution_count": 9
         }
       ],
       "source": [
-        "def ksi(word):\n",
+        "def xi(word):\n",
         "  g = [0,0,0,0] #initialize output array\n",
         "  for i in range(4):\n",
         "    g[i] = sigma(word[(i+1) % 4]) #we permute each byte in the word and map it through sigma\n",
@@ -294,7 +304,7 @@
         "  return(g)\n",
         "\n",
         "word = [sp.Poly(x**4+x, modulus=2),sp.Poly(x**5+x**2, modulus=2),sp.Poly(x**6+x**3, modulus=2),sp.Poly(x**7+1, modulus=2)] #test word\n",
-        "ksi(word) "
+        "xi(word) "
       ]
     },
     {
@@ -310,13 +320,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "IJ68kWEKBro-",
-        "outputId": "db555e76-df23-43d5-deac-672de5216811"
+        "outputId": "06fe82e4-92f5-4292-af00-7489e2a00dd9"
       },
       "outputs": [
         {
@@ -383,7 +393,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "GLXaUyZw2chd"
       },
@@ -404,15 +414,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "id": "J6G2chAnSZYQ"
       },
       "outputs": [],
       "source": [
         "def rho(state):\n",
-        "  state_enc = [[state[(j-i)][j] for j in range(4)] for i in range(4)] #switch around the bytes in words\n",
-        "  state_enc[1], state_enc[3] = state_enc[3], state_enc[1] #swap two encrypted words with each other due to switching around\n",
+        "  state_enc = [[state[(j-i)][j] for j in range(4)] for i in range(4)] \n",
+        "  #switch around the bytes in words\n",
+        "  state_enc[1], state_enc[3] = state_enc[3], state_enc[1] \n",
+        "  #swap two encrypted words with each other due to switching around\n",
         "  return(state_enc)"
       ]
     },
@@ -427,13 +439,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "id": "29GeaYH26ccI",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3f938d6c-ebbf-406b-9998-d530b71c4d17"
+        "outputId": "1b0ae688-9377-4248-f82d-2c3f22d521e3"
       },
       "outputs": [
         {
@@ -456,7 +468,7 @@
         "    p=[0,0,0,0] #initialise a word p\n",
         "    if i%4 == 0: #procedure to get wn[i] for i divisible by 4\n",
         "      X = [sp.Poly(x**int((i/4)),x,modulus=2),0,0,0]\n",
-        "      k = ksi(wn[i+3])\n",
+        "      k = xi(wn[i+3])\n",
         "      w = wn[i]\n",
         "      for j in range(4): #this loop does vector addition\n",
         "        p[j] = X[j] + k[j] + w[j] \n",
@@ -499,7 +511,8 @@
       "cell_type": "code",
       "source": [
         "def AES_step(state,key_n):\n",
-        "  state_enc_n = [[tau(state[i][j],key_n[i][j]) for j in range(4)] for i in range(4)] # translation by key_n\n",
+        "  state_enc_n = [[tau(state[i][j],key_n[i][j]) for j in range(4)] for i in range(4)] \n",
+        "  # translation by key_n\n",
         "\n",
         "  for i in range(4):\n",
         "    for j in range(4):\n",
@@ -515,7 +528,7 @@
       "metadata": {
         "id": "4zFnK32RfwwL"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -539,7 +552,8 @@
         "    state_enc_aes = AES_step(state_enc_aes,key_aes_n[i])\n",
         "  \n",
         "  \n",
-        "  state_enc_aes = [[tau(state_enc_aes[i][j],key_aes_n[9][i][j]) for j in range(4)] for i in range(4)] # translation by key_n\n",
+        "  state_enc_aes = [[tau(state_enc_aes[i][j],key_aes_n[9][i][j]) for j in range(4)] for i in range(4)] \n",
+        "  # translation by key_n\n",
         "  \n",
         "  for i in range(4):\n",
         "    for j in range(4):\n",
@@ -547,7 +561,8 @@
         "\n",
         "  state_enc_aes = rho(state_enc_aes) # image under rho\n",
         "\n",
-        "  state_enc_aes = [[tau(state_enc_aes[i][j],key_aes_n[10][i][j]) for j in range(4)] for i in range(4)] # translation by key_n\n",
+        "  state_enc_aes = [[tau(state_enc_aes[i][j],key_aes_n[10][i][j]) for j in range(4)] for i in range(4)] \n",
+        "  # translation by key_n\n",
         "\n",
         "  return(state_enc_aes)\n",
         "\n",
@@ -566,9 +581,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eNmUOZhzfQMi",
-        "outputId": "e0f487ea-fce2-444d-d9ac-594be9c52bc2"
+        "outputId": "9bfd0793-efff-4033-ee7d-f46f1183054a"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -591,7 +606,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "id": "0aG63MbVz_Ua"
       },
@@ -624,13 +639,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "id": "DS-JRaxexsRf",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f0557c5b-e288-4bc8-f199-04f77d9789ad"
+        "outputId": "43a25238-77ba-4520-e6fa-a4b086421853"
       },
       "outputs": [
         {
@@ -674,15 +689,6 @@
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "aqH3yGzZUOk1"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "source": [
         "# as a state:\n",
         "Hello_World = [[sp.Poly(x**6+x**3,x,modulus=2),sp.Poly(x**6+x**5+x**2+1,x,modulus=2),sp.Poly(x**6+x**5+x**3+x**2,x,modulus=2),sp.Poly(x**6+x**5+x**3+x**2,x,modulus=2)],[sp.Poly(x**6+x**5+x**3+x**2+x+1,x,modulus=2),sp.Poly(x**5,x,modulus=2),sp.Poly(x**6+x**4+x**2+x+1,x,modulus=2),sp.Poly(x**6+x**5+x**3+x**2+x+1,x,modulus=2)],[sp.Poly(x**6+x**5+x**4+x,x,modulus=2),sp.Poly(x**6+x**5+x**3+x**2,x,modulus=2),sp.Poly(x**6+x**5+x**2,x,modulus=2),sp.Poly(x**5,x,modulus=2),],[sp.Poly(x**5,x,modulus=2),sp.Poly(x**5,x,modulus=2),sp.Poly(x**5,x,modulus=2),sp.Poly(x**5,x,modulus=2)]]\n",
@@ -701,9 +707,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Zcl8VdDiTID-",
-        "outputId": "4199b9d8-7cc8-4b58-894a-ce113c6f8363"
+        "outputId": "0aaa1e19-f5cf-4e70-fbc7-3d7863945f60"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -718,7 +724,8 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
